# GW2-Macro

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  MacroManager.rc  README.md  build.sh  resource.h
.github/workflows/: build.yml
include/: Shared.h
src/: GameModeCheck.cpp  GameModeCheck.h  Macro.h  MacroManager.cpp  MacroManager.h  Module.cpp  Module.h  Resource.h  Resource.rc  Settings.cpp  Settings.h  Shared.cpp  Shared.h  entry.cpp  game_mode_check.cpp  game_mode_check.h  keybind_manager.cpp  keybind_manager.h  macro.cpp  macro.h  macro_executor.cpp  macro_executor.h  macro_manager.cpp  macro_manager.h  macro_save.cpp  macro_save.h  main.cpp  module.cpp  resource.h  shared.cpp  shared.h  string_conversions.cpp  string_conversions.h
src/compliance/: GameModeCheck.cpp  GameModeCheck.h
src/core/: AddonLifecycle.cpp  AddonLifecycle.h  Context.cpp  Context.h  Module.cpp  Module.h  Shared.cpp  Shared.h
src/gui/: AddonOptions.cpp  AddonOptions.h  ImportExport.cpp  ImportExport.h  MacroEditor.cpp  MacroEditor.h  MainWindow.cpp  MainWindow.h
src/macro/: KeybindManager.cpp  KeybindManager.h  Macro.cpp  Macro.h  MacroExecutor.cpp  MacroExecutor.h  MacroManager.cpp  MacroManager.h
src/persistence/: Settings.cpp  Settings.h
src/utils/: StringConversions.cpp  StringConversions.h
